src/objects/Download_Filter__mdt.object
<CustomObject>
    <description>Fills out map for filter dependency (Release controls Version; Version controls os_group) - matches picklists in downloads__c</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Category__c</fullName>
        <label>Download Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identity_2020</fullName>
                    <default>true</default>
                    <label>Identity 2020</label>
                </value>
                <value>
                    <fullName>RC 2021</fullName>
                </value>
                <value>
                    <fullName>Identity 2021</fullName>
                </value>
                <value>
                    <fullName>HyperWeb CRX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Eligible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VersionDetail__c</fullName>
        <label>Version Detail</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLatestReleaseType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for latest releasetype concat with Version meant to assist in default selections</description>
        <label>isLatestReleaseType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_RC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean to prevent display unless they are a part of the Early adopter program</description>
        <label>is RC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>osGroupList__c</fullName>
        <description>semi-colon delimited os groups based on version number</description>
        <inlineHelpText>semi-colon delimited os groups based on version number</inlineHelpText>
        <label>osGroupList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>releaseType__c</fullName>
        <description>releaseType - Platform, Patch, Feature</description>
        <label>releaseType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>versionList__c</fullName>
        <description>semi-colon delimited list of versions based on downloads__c.Type__c</description>
        <inlineHelpText>semi-colon delimited list of versions based on downloads__c.Type__c</inlineHelpText>
        <label>versionList</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Download Filter</label>
    <pluralLabel>Download filters</pluralLabel>
</CustomObject>